Fix for entry scrollbar

--- a/petal.css
+++ b/petal.css
@@ -64,9 +64,14 @@ html {
   padding: 0.6rem 0.75rem;
   resize: none;
   width: 100%;
+  scrollbar-width: 10px;
 }
 #entry:focus {
   outline: 0;
+}
+
+#entry::-webkit-scrollbar {
+  width: 10px;
 }
 
 .msg--system {
